--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/littlefish-tech/FriendFinder/issues"
   },
-  "homepage": "https://github.com/littlefish-tech/FriendFinder#readme"
+  "homepage": "https://github.com/littlefish-tech/FriendFinder#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
